# apex-dashboard-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  prompts_used.md  pyproject.toml  requirements-dev.txt  requirements.txt
apex_dashboard_analytics/: __init__.py  cli.py  config.py  constants.py  formulas.py  logging.py  main.py  responses.py
apex_dashboard_analytics/api/: __init__.py  deps.py  employee_routes.py  executive_routes.py  flowcharts_routes.py  formulas_routes.py  health_routes.py  manager_routes.py  quiz_routes.py  roadmap_routes.py  tutor_routes.py
apex_dashboard_analytics/core/: __init__.py  config.py  database.py  logging.py
apex_dashboard_analytics/data/: __init__.py  employees.json  executive.json  managers.json  mock_data.py  mock_json.py  mock_store.py
apex_dashboard_analytics/integrations/: __init__.py  ai_tutor.py  assessment.py  base.py  learning_assistant.py  skill_profiler.py
apex_dashboard_analytics/middlewares/: __init__.py  logging.py
apex_dashboard_analytics/models/: __init__.py  integration_log.py
apex_dashboard_analytics/schemas/: __init__.py  assessment.py  dashboard.py  learning.py  quiz.py  skills.py  tutoring.py
apex_dashboard_analytics/services/: assessment_mapper.py  assessment_service.py  concurrency.py  dashboard_parsers.py  dashboard_service.py
deploy/: apex-dashboard-analytics.service
flowcharts/: basic-api-flow.md  employee-dashboard.md  manager-dashboard.md
migrations/: env.py
migrations/versions/: 0001_create_integration_logs.py
