[project]
name = "apex-dashboard-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "mohitkumar.talreja@triconinfotech.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.50.1",
]

[project.scripts]
apex-dashboard-analytics = "apex_dashboard_analytics:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
