[project]
name = "apex-dashboard-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "mohitkumar.talreja@triconinfotech.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.50.1",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.13",
    "pre-commit==4.6.0",
    "pytest>=9.1.1",
]

[project.scripts]
apex-dashboard-analytics = "apex_dashboard_analytics:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apex_dashboard_analytics*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
